--- a/src/app/user-form/user-form.component.html
+++ b/src/app/user-form/user-form.component.html
@@ -4,7 +4,7 @@
         <div class="form-wrapper">
             <mat-card class="card">
                 <form [formGroup]="userForm">
-                    <mat-card-title i18n>Űrlap</mat-card-title>
+                    <mat-card-title>Űrlap</mat-card-title>
                     <mat-card-content class="card-content">
                         <div class="form-field-wrapper">
                             <mat-form-field appearance="fill">
